# vehicle_platooning_project

./: .gitignore  Final_Project_Presentation.pptx  Final_Submission_Report.docx  README.md  aco.py  debug.py  environment.yml  final_plots.py  generate_final_docx.py  generate_ppt.py  import networkx as nx.py  network.py  parse_and_build_report.py  plots.py  profile.txt  profile_after.txt  pyproject.toml  report.txt  report_source.md  results.csv  run.py  simulation.py  test_aco.py  test_learning.py  test_network.py  ui.py  vehicle_animation.py  visualization.py
.github/workflows/: python-package-conda.yml  python-package.yml
.jules/: bolt.md
tests/: test_aco.py  test_learning.py  test_network.py
